subo cambios necesarios con metodo filter

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,7 +37,7 @@ body {
   margin-top: 60px;
 }
 
-.reset-puntaje-boton {
+.boton {
   background-color: white;
   border: none;
   font-size: 15px;
